--- a/L11/index.html
+++ b/L11/index.html
@@ -12,25 +12,19 @@
     <div id="app">
       <div class="nav-bar"></div>
 
-      <div class="product-display">
-        <div class="product-container">
-          <div class="product-image">
-            <img :src="image" :alt="product" />
-          </div>
-          <div class="product-info">
-            <h1>{{ product }}</h1>
-            <a :href="url">Follow the link have a closer look</a>
-          </div>
-        </div>
-      </div>
+      <div class="cart">Cart({{ cart.length }})</div>
+      <product-display :premium="premium" @add-to-cart="updateCart"></product-display>
     </div>
 
     <!-- Import App -->
     <script src="./main.js"></script>
 
+    <!-- Import Components -->
+    <script src="./components/ProductDisplay.js"></script>
+
     <!-- Mount App -->
     <script>
-      const mountedApp = app.mount('#app');
+      const mountedApp = app.mount('#app')
     </script>
   </body>
 </html>
