--- a/L5/index.html
+++ b/L5/index.html
@@ -11,15 +11,16 @@
   <body>
     <div id="app">
       <div class="nav-bar"></div>
-
+      
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <img :src="image" :alt="product" />
+            <img v-bind:src="image">
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
-            <a :href="url">Follow the link have a closer look</a>
+            <p v-if="inStock">In Stock</p>
+            <p v-else>Out of Stock</p>
           </div>
         </div>
       </div>
@@ -30,7 +31,7 @@
 
     <!-- Mount App -->
     <script>
-      const mountedApp = app.mount('#app');
+      const mountedApp = app.mount('#app')
     </script>
   </body>
 </html>
