--- a/L7/index.html
+++ b/L7/index.html
@@ -11,14 +11,13 @@
   <body>
     <div id="app">
       <div class="nav-bar"></div>
-
       <div class="cart">Cart({{ cart }})</div>
-      
       <div class="product-display">
         <div class="product-container">
-          <div class="product-image">
-            <img v-bind:src="image">
+          <div :class="{'out-of-stock-img': !inStock}" class="product-image">
+            <img v-bind:src="image" />
           </div>
+
           <div class="product-info">
             <h1>{{ product }}</h1>
             <p v-if="inStock">In Stock</p>
@@ -27,12 +26,22 @@
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
 
-            <div 
-              v-for="variant in variants" 
-              :key="variant.id" 
-              @mouseover="updateImage(variant.image)" 
-            >{{ variant.color }}</div>
-            <button class="button" @click="addToCart">Add to Cart</button>
+            <div
+              v-for="variant in variants"
+              :key="variant.id"
+              @mouseover="updateImage(variant.image)"
+              class="color-circle"
+              :style="{backgroundColor:variant.color}"
+            ></div>
+
+            <button
+              class="button"
+              @click="addToCart"
+              :class="{disabledButton: !inStock}"
+              :disabled="!inStock"
+            >
+              Add to Cart
+            </button>
           </div>
         </div>
       </div>
@@ -43,7 +52,7 @@
 
     <!-- Mount App -->
     <script>
-      const mountedApp = app.mount('#app')
+      const mountedApp = app.mount('#app');
     </script>
   </body>
 </html>
